# TemGym

./: .gitignore  .pre-commit-config.yaml  MANIFEST.in  pyproject.toml  pytest.ini  requirements-doc.txt  stem_overfocus.ipynb  tem_gym_proto.py  test_requirements.txt  tox.ini
.github/workflows/: ci.yml
examples/: stem_overfocus.ipynb
examples/basic_examples/: aberrated_lens.ipynb  lens.ipynb  projector_lens_system.py
examples/cardinal_lens_examples/: aberrated_lens.ipynb  perfect_lens.ipynb
examples/fourdstem_example/: generate.ipynb  stem_overfocus.ipynb
examples/gaussian_beam_examples/: NanoMi_example.py  TEM_example.py  aberrated_lens.ipynb  aperture.ipynb  fourier_transform_test.ipynb  fourier_transform_timing.ipynb  fresnel_comparison.ipynb  gauss_gui_example.py  gauss_gui_test.py  gaussian_beam_free_space.ipynb  gaussian_beam_lens.ipynb  get_gauss_image_time.py  get_gauss_image_time_test.py  get_gauss_image_time_test.py.lprof  perfect_lens.ipynb
examples/jax_examples/: 4Dstem.ipynb  4Dstem_jax.ipynb  basic_jax.ipynb  fit_microscope_jax.ipynb  gradients_jax.ipynb  jax.ipynb  jax_selected_derivatives_with_pytrees.ipynb  results_diff.json  results_imaging.json  taylor_jax.ipynb
examples/matplotlib_examples/: biprism_opl_example.py  proto_matplotlib.ipynb  single_biprism_interference_example_matplotlib.py  stem_model_matplotlib.py
examples/pyqtgraph_examples/: abtem_sample.ipynb  abtem_sample.py  abtem_sample_test.ipynb  abtem_sample_test.py  biprism_gaussian_beam.ipynb  biprism_gaussian_beam_example.py  biprism_interference_example.py  gaussian_beam.ipynb  lens_example_pyqt.py
prototypes/: torchgym.ipynb
src/temgym_proto/: __init__.py  gui.py  shapes.py  utils.py
src/temgymbasic/: __init__.py  aber.py  backend.py  cli.py  components.py  config.py  dimensioned_slider.py  functions.py  gbd.py  gui.py  jax_components.py  jax_gbd.py  jax_model.py  jax_ray.py  jax_run.py  jax_source.py  jax_utils.py  model.py  plotting.py  prototype.py  rays.py  shapes.py  utils.py  widgets.py
tests/: test_aberrations.py  test_aberrations_jax.py  test_components.py  test_components_jax.py  test_gaussian_beam_decomposition.py  test_stemmodel.py
(+3 files in other folders)
