[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[project]
name = "temgymbasic"
version = "0.7.0.0.dev0"
authors = [
  { name="David Landers", email="davidlanders2009@hotmail.com" },
  { name="Matthew Bryan", email="matthewbryan52@gmail.com" },
]
description = "An educational TEM ray tracing matrix package"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]
dependencies = [
  'numpy',
  'typing-extensions',
]

[project.optional-dependencies]
gui = [
  'matplotlib',
  'pyqtgraph',
  'pyopengl',
  'triangle',
  'PyQt5',
]

[project.urls]
"Homepage" = "https://github.com/AMCLab/TemGymBasic"
