[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/temgymbasic"]
only-packages = true

[project]
name = "temgymbasic"
version = "0.7.0.0.dev0"
authors = [
  { name="David Landers", email="davidlanders2009@hotmail.com" },
  { name="Matthew Bryan", email="matthewbryan52@gmail.com" },
  { name="Dieter Weber", email="d.weber@fz-juelich.de" },
]
description = "An educational TEM ray tracing matrix package"
readme = "README.md"
keywords=["electron microscopy", "virtual twin", "gui"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11", 
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]
requires-python = ">=3.7"
dependencies = [
  'numpy',
  'typing-extensions',
]

[project.scripts]
temgym = "temgymbasic.cli:main_window"

[project.optional-dependencies]
gui = [
  'matplotlib',
  'pyqtgraph',
  'pyopengl',
  'triangle',
  'PySide6',
]

[project.urls]
"Homepage" = "https://github.com/TemGym/TemGym"
